--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,16 @@ name = "favro-mcp"
 version = "0.1.0"
 description = "MCP server for Favro project management"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
-    "fastmcp>=2.0.0",
-    "httpx>=0.27.0",
-    "pydantic>=2.0",
-    "python-dotenv>=1.0.0",
+  "fastmcp>=2.0.0",
+  "httpx>=0.27.0",
+  "pydantic>=2.0",
+  "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
-dev = [
-    "pytest>=8.0",
-    "pytest-asyncio>=0.24",
-    "ruff>=0.8.0",
-    "pyright>=1.1.389",
-]
+dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8.0", "pyright>=1.1.389"]
 
 [project.scripts]
 favro-mcp = "favro_mcp.__main__:main"
