--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,3 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "favro-mcp"
 version = "0.1.0"
@@ -16,22 +12,19 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8.0", "pyright>=1.1.389"]
+dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pyright>=1.1.389"]
 
 [project.scripts]
 favro-mcp = "favro_mcp.__main__:main"
 
-[tool.hatch.build.targets.wheel]
-packages = ["src/favro_mcp"]
-
-[tool.ruff]
-line-length = 100
-target-version = "py310"
-
-[tool.ruff.lint]
-select = ["E", "F", "W", "I", "UP", "B", "SIM"]
-
 [tool.pyright]
 pythonVersion = "3.12"
 typeCheckingMode = "strict"
-reportMissingTypeStubs = false
+
+[build-system]
+requires = ["hatchling"]
+
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/favro_mcp"]
